fixed a bug when going up to parent node with same visible string

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -51,7 +51,8 @@ table {
 }
 
 table td {
-    border: 2px transparent;
+    border: 2px;
+    /*border-style: solid;*/
 
 }
 
